--- a/src/views/crud.ejs
+++ b/src/views/crud.ejs
@@ -11,56 +11,56 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <form action="/post-crud" method="POST" class="row mt-3">
-            <div class="col-md-12"><h4>Create a new user</h4></div>
-            <div class="col-md-6">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" >
+    <div className="container">
+        <form action="/post-crud" method="POST" className="row mt-3">
+            <div className="col-md-12"><h4>Create a new user</h4></div>
+            <div className="col-md-6">
+                <label for="email" className="form-label">Email</label>
+                <input type="email" className="form-control" id="email" name="email" >
             </div>
 
-            <div class="col-md-6">
-                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" >
+            <div className="col-md-6">
+                 <label for="password" className="form-label">Password</label>
+                <input type="password" className="form-control" id="password" name="password" >
             </div>
 
-            <div class="col-md-6">
-                <label for="firstName" class="form-label">First name</label>
-                <input type="text" class="form-control" id="firstName" name="firstName" >
+            <div className="col-md-6">
+                <label for="firstName" className="form-label">First name</label>
+                <input type="text" className="form-control" id="firstName" name="firstName" >
             </div>
 
-            <div class="col-md-6">
-                <label for="lastName" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="lastName" name="lastName" >
+            <div className="col-md-6">
+                <label for="lastName" className="form-label">Last name</label>
+                <input type="text" className="form-control" id="lastName" name="lastName" >
             </div>
 
-            <div class="col-12">
-                <label for="address" class="form-label">Address</label>
-                <input type="text" class="form-control" id="address" name="address" >
+            <div className="col-12">
+                <label for="address" className="form-label">Address</label>
+                <input type="text" className="form-control" id="address" name="address" >
             </div>
 
-            <div class="col-md-6">
-                <label for="phoneNumber" class="form-label">Phone number</label>
-                <input type="text" class="form-control" name="phoneNumber" id="phoneNumber">
+            <div className="col-md-6">
+                <label for="phoneNumber" className="form-label">Phone number</label>
+                <input type="text" className="form-control" name="phoneNumber" id="phoneNumber">
             </div>
 
-            <div class="col-md-4">
-                <label for="gender" class="form-label">Gender</label>
-                <select id="gender" name="gender" class="form-select">
+            <div className="col-md-4">
+                <label for="gender" className="form-label">Gender</label>
+                <select id="gender" name="gender" className="form-select">
                     <option selected value="1">Male</option>
                     <option value="0">Female</option>
                 </select>
             </div>
-            <div class="col-md-2">
-                <label for="roleID" class="form-label">Role</label>
-                <select id="roleID" name="roleID" class="form-select">
+            <div className="col-md-2">
+                <label for="roleID" className="form-label">Role</label>
+                <select id="roleID" name="roleID" className="form-select">
                     <option selected value="R1">Admin</option>
                     <option value="R2">Doctor</option>
                     <option value="R3">Patient</option>
                 </select>
             </div>
-            <div class="col-12 mt-3">
-                <button type="submit" class="btn btn-primary">Sign in</button>
+            <div className="col-12 mt-3">
+                <button type="submit" className="btn btn-primary">Sign in</button>
             </div>
         </form>
     </div>
