--- a/src/views/displayCRUD.ejs
+++ b/src/views/displayCRUD.ejs
@@ -34,11 +34,11 @@
         </style>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 mt-3"><b>Get CRUD from view</b></div>
-            <div class="col-12">
-                <table style="width:100%" class="mt-3">
+    <div className="container">
+        <div className="row">
+            <div className="col-12 mt-3"><b>Get CRUD from view</b></div>
+            <div className="col-12">
+                <table style="width:100%" className="mt-3">
                     <tr>
                     <th>Email</th>
                     <th>First name</th>
@@ -54,11 +54,11 @@
                             <td><%= dataTable[i].lastName %></td>
                             <td><%= dataTable[i].address %></td>
                             <td>
-                                <a href="/edit-crud?id=<%= dataTable[i].id %>" class="a-edit" >
-                                    <button type="button" class="btn-edit">Edit</button>
+                                <a href="/edit-crud?id=<%= dataTable[i].id %>" className="a-edit" >
+                                    <button type="button" className="btn-edit">Edit</button>
                                 </a>
-                                <a href="/delete-crud?id=<%= dataTable[i].id %>" class="a-delete" >
-                                    <button type="button" class="btn-delete">Delete</button>
+                                <a href="/delete-crud?id=<%= dataTable[i].id %>" className="a-delete" >
+                                    <button type="button" className="btn-delete">Delete</button>
                                 </a>
                             </td>
                         </tr>
