--- a/src/views/editCRUD.ejs
+++ b/src/views/editCRUD.ejs
@@ -11,54 +11,54 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <form action="/put-crud" method="POST" class="mt-3 row col-6">
-                <div class="col-md-12"><b>Edit user's information:</b></div>
+    <div className="container">
+        <div className="row">
+            <form action="/put-crud" method="POST" className="mt-3 row col-6">
+                <div className="col-md-12"><b>Edit user's information:</b></div>
                 
-                <div class="col-md-6">
-                    <label for="firstName" class="form-label">First name</label>
+                <div className="col-md-6">
+                    <label for="firstName" className="form-label">First name</label>
                     <input 
                     type="text" 
-                    class="form-control" 
+                    className="form-control" 
                     id="firstName" 
                     name="firstName" 
                     value="<%= user.firstName %>" >
                 </div>
 
-                <div class="col-md-6">
-                    <label for="lastName" class="form-label">Last name</label>
+                <div className="col-md-6">
+                    <label for="lastName" className="form-label">Last name</label>
                     <input 
                     type="text" 
-                    class="form-control" 
+                    className="form-control" 
                     id="lastName" 
                     name="lastName" 
                     value="<%= user.lastName %>" >
                 </div>
 
-                <div class="col-12">
-                    <label for="address" class="form-label">Address</label>
+                <div className="col-12">
+                    <label for="address" className="form-label">Address</label>
                     <input 
                     type="text" 
-                    class="form-control" 
+                    className="form-control" 
                     id="address" 
                     name="address"
                     value="<%= user.address %>" >
                 </div>
 
-                <div class="col-12">
-                    <label for="phonenumber" class="form-label">Phone number</label>
+                <div className="col-12">
+                    <label for="phonenumber" className="form-label">Phone number</label>
                     <input 
                     type="text" 
-                    class="form-control" 
+                    className="form-control" 
                     id="phonenumber" 
                     name="phonenumber"
                     value="<%= user.phonenumber %>" >
                 </div>
                 
                 <input type="text" name="id" value="<%= user.id %>" hidden>
-                <div class="col-12 mt-3">
-                    <button type="submit" class="btn btn-primary">Update</button>
+                <div className="col-12 mt-3">
+                    <button type="submit" className="btn btn-primary">Update</button>
                 </div>
             </form>
         </div>
