--- a/src/views/homepage.ejs
+++ b/src/views/homepage.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Booking Care</title>
+    <title>System Booking A Medical Appointment</title>
 </head>
 
 <body>
-    <h1>Bi dep trai</h1>
+    <h1>test data</h1>
     <p>
     <%=data%>
    </p> 
